--- a/clientApp/MyFirstApiSite/wwwroot/ShoppingBag.html
+++ b/clientApp/MyFirstApiSite/wwwroot/ShoppingBag.html
@@ -22,7 +22,7 @@
             <p>
                 הסל שלך מכיל <span id="itemCount"></span> פריטים ומגיע לסך של <span id="totalAmount"></span>.
             </p>
-            <a class="nxbtn primary GoToCheckout TopLink checkout_transfer"  href="#" onclick="placeOrder(); return false;">לביצוע ההזמנה</a> <a class="shopmore" href="Products.html?fromShoppingBag=1">המשך בקניה</a> <div class="ClearBoth"></div>
+            <a id="placeOrder" class="nxbtn primary GoToCheckout TopLink checkout_transfer"  href="#" onclick="placeOrder(); return false;">לביצוע ההזמנה</a> <a class="shopmore" href="Products.html?fromShoppingBag=1">המשך בקניה</a> <div class="ClearBoth"></div>
         </div>
         <div class="cistGroup">
             <table id="items" class="items">
