--- a/clientApp/MyFirstApiSite/wwwroot/Products.html
+++ b/clientApp/MyFirstApiSite/wwwroot/Products.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src=" ../Categories.js"></script>
-    <script src="../Products.js"></script>
-    <link href="../Products.css" rel="stylesheet" />
+    <script src="./js/Categories.js"></script>
+    <script src="./js/Products.js"></script>
+    <link href="./css/Products.css" rel="stylesheet" />
 
     <meta charset="utf-8" />
     <title></title>
