--- a/clientApp/MyFirstApiSite/wwwroot/ShoppingBag.html
+++ b/clientApp/MyFirstApiSite/wwwroot/ShoppingBag.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="../ShoppingBag.css" rel="stylesheet" />
-    <script src="../ShoppingBag.js"></script>
+    <link href="./css/ShoppingBag.css" rel="stylesheet" />
+    <script src="./js/ShoppingBag.js"></script>
     <template id="temp-row">
         <tr class="item-row">
             <td class="imageColumn"><a rel="lightbox" href="#"><div class="image"></div></a></td>
