--- a/clientApp/MyFirstApiSite/wwwroot/homePage.html
+++ b/clientApp/MyFirstApiSite/wwwroot/homePage.html
@@ -22,8 +22,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="homePage.css">
+    <script src="./js/home.js"></script>
+    <link rel="stylesheet" href="./css/homePage.css">
     <title>בית</title>
 </head>
 
