--- a/clientApp/MyFirstApiSite/wwwroot/home.html
+++ b/clientApp/MyFirstApiSite/wwwroot/home.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="home.css">
+    <script src="./js/home.js"></script>
+    <link rel="stylesheet" href="./css/home.css">
     <title></title>
 </head>
 
