--- a/clientApp/MyFirstApiSite/wwwroot/userDetails.html
+++ b/clientApp/MyFirstApiSite/wwwroot/userDetails.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="home.css">
+    <script src="./js/home.js"></script>
+    <link rel="stylesheet" href="./css/home.css">
     <title>עדכון פרטי משתמש</title>
 </head>
 <body>
